# offseason-proteines-resilientes

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  data.sqlite-shm  data.sqlite-wal  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
data/: disabled_products.txt  keywords_auchan.csv  keywords_biocoop.csv  keywords_carrefour.csv  keywords_intermarche.csv  keywords_leclerc.csv  keywords_picard.csv  keywords_super_u.csv  updated_category.txt
docs/: rdb_diagram.mermaid  tech-diagram.excalidraw
migrations/: env.py
migrations/versions/: 0ea78d81a3aa_add_category_and_aliment_to_product_.py  0ea78d81a3aa_add_category_and_department_to_product_.py  0ea78d81a3aa_add_category_to_product.py  24c1199c4b3a_update_openfoodfacts_url_to_fr_instance.py  74f8c9658d25_add_disabled_field_to_product_table.py  aaa4b447e0c5_add_discounted_amount_field_to_price_.py  b13c7ee298c7_add_quantity_and_quantity_unit_fields_to_product_table.py  d483c555d6d1_add_field_origin_to_source_table.py  dd08dfad6653_add_discounted_field_to_price_table.py  dffe227f920d_add_super_u_to_origin_s_native_enum.py  f4f4265c8dd2_update_calories_100g_numeric_precision_.py
src/abstract/: iscraper.py  isite_connector.py
src/data_editor/: cli.py
src/models/: category.py  environmental_facts.py  nutrition_facts.py  price.py  product.py  reference.py  source.py
src/off_data_collector/: api.py  cli.py  exceptions.py
src/scraper_auchan/: cli.py  items.py  pipeline_rdbms.py  products_spider.py
src/scraper_biocoop/: cli.py  pipeline_rdbms.py  products_spider.py
src/scraper_carrefour/: cli.py  items.py  pipeline_rdbms.py  products_spider.py
src/scraper_intermarche/: cli.py  pipeline_rdbms.py  products_spider.py
src/scraper_leclerc/: cli.py  pipeline_rdbms.py  products_spider.py
src/scraper_picard/: cli.py  pipeline_rdbms.py  products_spider.py
src/scraper_super_u/: cli.py  pipeline_rdbms.py  products_spider.py  scrapy.cfg
src/scraper_super_u/scraper_super_u/: items.py  middlewares.py  pipelines.py  settings.py
src/scraper_super_u/scraper_super_u/spiders/: products_spider.py
src/scraper_superu/: __scraper_superu.py  cli.py  connector_nodriver.py  items.py  pipeline_rdbms.py  products_spider.py  scraper_superu.py  scrapy.cfg  settings.py
src/scraper_superu/spiders/: products_spider.py
src/superu/: cli.py  connector_nodriver.py  scraper_superu.py
src/superu_data_collector/: cli.py
src/utils/: database.py  logger.py  spider.py
tests/integration/migrations/: __init__.py  test_migrations.py  test_sqlite.py
tests/integration/models/: test_product_reference.py  test_product_source.py
tests/unit/models/: test_category.py  test_environmental_facts.py  test_nutrition_facts.py  test_product.py  test_reference.py  test_source.py
