[project]
name = "proteines-resilientes"
version = "0.1.0"
description = ""
authors = [
    {name = "The Proteines Resilientes team"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "models", from = "src"},
    {include = "openfoodfacts", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
