[project]
name = "proteines-resilientes"
version = "0.1.0"
description = "Proteines Resilientes"
authors = [
    {name = "The Proteines Resilientes team"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "openfoodfacts (>=2.6.1,<3.0.0)"
]

[project.scripts]
pr-offdc = "off_data_collector.cli:main"
pr-scraper-auchan = "scraper_auchan.cli:main"

[tool.poetry]
packages = [
    {include = "models", from = "src"},
    {include = "off_data_collector", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
